--- a/src/main/java/com/ujr/oauth/gui/GooglePubSubMain.fxml
+++ b/src/main/java/com/ujr/oauth/gui/GooglePubSubMain.fxml
@@ -10,7 +10,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="835.0" prefWidth="1276.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ujr.oath.gui.GooglePubSubMainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="835.0" prefWidth="1276.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ujr.oauth.gui.GooglePubSubMainController">
    <children>
       <Pane layoutX="14.0" layoutY="7.0" prefHeight="135.0" prefWidth="501.0">
          <children>
